# optima_toolbox

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: 404.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/1-getting_started/: getting_started_0.html  getting_started_adding_a_robot.html  getting_started_optima_toolbox_installation.html  getting_started_robot_test.html  getting_started_rust_installation.html
docs/2-optima_rust_tutorials/: optima_rust_tutorials_0.html  optima_rust_tutorials_loading_a_robot.html  optima_rust_tutorials_robot_configurations.html  optima_rust_tutorials_robot_set_configurations.html  optima_rust_tutorials_robot_sets.html  optima_rust_tutorials_robots.html
docs/getting_started/: adding_a_robot.html  citing_optima.html  getting_started_0.html  optima_toolbox_installation.html  python_setup.html  robot_test.html  rust_installation.html  wasm_setup.html
docs/intersection_contact_and_proximity_checks/: adding_new_environment_mesh.html  bounding_volume_hierarchies.html  contact_checking.html  intersection_checking.html  intersection_contact_and_proximity_checks_0.html  proximity_checking.html  proximity_checking_using_proxima.html  robot_geometric_shape_scenes.html
docs/inverse_kinematics/: inverse_kinematics_0.html  motion_ik.html  static_ik.html
docs/optimization/: nonlinear_optimization.html  optima_tensor_function_derivatives.html  optima_tensor_functions.html  optima_tensors.html  optimization_0.html
docs/robot_kinematics/: forward_kinematics.html  robot_jacobians.html  robot_kinematics_0.html
optima_book/: book.toml
optima_refactor/: Cargo.toml  rust-toolchain.toml
optima_refactor/assets/: README
optima_refactor/crates/optima_3d_mesh/: Cargo.toml
optima_refactor/crates/optima_3d_mesh/src/: collada.rs  lib.rs  stl.rs
optima_refactor/crates/optima_3d_spatial/: Cargo.toml
optima_refactor/crates/optima_3d_spatial/src/: lib.rs  optima_3d_pose.rs  optima_3d_rotation.rs  optima_3d_vec.rs  optima_se3_pose.rs
optima_refactor/crates/optima_bevy/: Cargo.toml
optima_refactor/crates/optima_bevy/assets/: README
optima_refactor/crates/optima_bevy/optima_bevy_egui/: Cargo.toml
optima_refactor/crates/optima_bevy/optima_bevy_egui/src/: lib.rs
optima_refactor/crates/optima_bevy/src/: lib.rs  scripts.rs
optima_refactor/crates/optima_bevy/src/optima_bevy_utils/: camera.rs  file.rs  lights.rs  mod.rs  robot.rs  robotics.rs  shape_scene.rs  storage.rs  transform.rs  viewport_visuals.rs
optima_refactor/crates/optima_console/: Cargo.toml
optima_refactor/crates/optima_console/src/: input.rs  lib.rs  output.rs
optima_refactor/crates/optima_file/: Cargo.toml
optima_refactor/crates/optima_file/src/: lib.rs  path.rs  traits.rs
optima_refactor/crates/optima_geometry/: Cargo.toml
optima_refactor/crates/optima_geometry/src/: lib.rs
optima_refactor/crates/optima_interpolation/: Cargo.toml
optima_refactor/crates/optima_interpolation/src/: lib.rs  splines.rs
optima_refactor/crates/optima_linalg/: Cargo.toml
optima_refactor/crates/optima_linalg/src/: lib.rs  vecs_and_mats.rs
optima_refactor/crates/optima_misc/: Cargo.toml
optima_refactor/crates/optima_misc/src/: lib.rs  misc_traits.rs
optima_refactor/crates/optima_network/: Cargo.toml
optima_refactor/crates/optima_network/examples/: 0_udp_client.rs
optima_refactor/crates/optima_network/src/: lib.rs  rosbridge_interface.py  udp_client.rs
optima_refactor/crates/optima_network/src/config/: ros_config.yaml
optima_refactor/crates/optima_optimization/: Cargo.toml
optima_refactor/crates/optima_optimization/src/: argmin.rs  lib.rs  loss_functions.rs  nlopt.rs  open.rs  optimization_engine.rs
optima_refactor/crates/optima_optimization/src/derivative_based_optimization/: mod.rs  optimization_engine.rs
optima_refactor/crates/optima_optimization2/: Cargo.toml
optima_refactor/crates/optima_optimization2/src/: argmin.rs  lib.rs  open.rs
optima_refactor/crates/optima_proximity/: Cargo.toml
optima_refactor/crates/optima_proximity/src/: distance.rs  lib.rs  pair_group_queries.rs  pair_queries.rs  proxima.rs  proxima2.rs  proximity_scene.rs  shape_group_query_traits.rs  shape_queries.rs  shape_query_traits.rs  shape_scene.rs  shapes.rs  trait_aliases.rs
optima_refactor/crates/optima_proximity/src/parry/: mod.rs  parry_group_queries.rs  parry_queries.rs  parry_shapes.rs
optima_refactor/crates/optima_proximity2/: Cargo.toml
optima_refactor/crates/optima_proximity2/src/: lib.rs  pair_group_queries.rs  pair_queries.rs  shape_queries.rs  shapes.rs
optima_refactor/crates/optima_robotics/: Cargo.toml
optima_refactor/crates/optima_robotics/src/: chain.rs  lib.rs  robot.rs  robot_model.rs  robot_set.rs  robot_shape_scene.rs  robotics_components.rs  robotics_diffblock_spawners.rs  robotics_functions.rs  robotics_optimization_solvers.rs  robotics_optimization_utils.rs  robotics_traits.rs  utils.rs
optima_refactor/crates/optima_robotics/src/robotics_optimization/: mod.rs  path_optimization.rs  robotics_collision_state_resolver.rs  robotics_optimization_functions.rs  robotics_optimization_ik.rs  robotics_optimization_look_at.rs  robotics_optimization_utils.rs
optima_refactor/crates/optima_robotics/src/robotics_optimization2/: mod.rs  robotics_optimization_functions.rs  robotics_optimization_ik.rs  robotics_optimization_look_at.rs
optima_refactor/crates/optima_sampling/: Cargo.toml
optima_refactor/crates/optima_sampling/src/: lib.rs
optima_refactor/crates/optima_unity_wrappers/: Cargo.toml
optima_refactor/crates/optima_universal_hashmap/: Cargo.toml
optima_refactor/crates/optima_universal_hashmap/src/: lib.rs
optima_refactor/crates/optima_utils/: Cargo.toml
optima_refactor/crates/optima_utils/src/: arr_storage.rs  lib.rs  misc_traits.rs
optima_refactor/crates/optima_wrappers/: Cargo.toml
optima_refactor/crates/optima_wrappers/src/: lib.rs
optima_refactor/crates/optima_wrappers/src/c_wrappers/: ik_solvers.rs
optima_refactor/crates/optima_wrappers/src/ffi_wrappers/: ik_solvers.rs  ik_solvers2.rs  mod.rs
(+11 files in other folders)
