[package]
name = "optima_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad_trait = { git = "https://github.com/djrakita/ad_trait" }
optima_3d_spatial = { path = "../optima_3d_spatial" }
bevy = { version="0.11.2", features = ["dynamic_linking"] }
