[package]
name = "optima_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad_trait = { git = "https://github.com/djrakita/ad_trait" }
optima_robotics = { path = "../optima_robotics" }
optima_3d_spatial = { path = "../optima_3d_spatial" }
optima_linalg = { path = "../optima_linalg" }
optima_file = { path = "../optima_file" }
optima_bevy_egui = { path = "optima_bevy_egui" }
bevy = { version="0.11.2", features = ["dynamic_linking"] }
bevy_stl = { version = "0.11.0", features = ["wireframe"] }
nalgebra = { version="0.32.*", features=["rand", "serde-serialize"] }
