[package]
name = "optima_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ad_trait = { git = "https://github.com/djrakita/ad_trait" }
ad_trait = { path = "/Users/djrakita/Documents/ad_trait" }
optima_robotics = { path = "../optima_robotics" }
optima_3d_spatial = { path = "../optima_3d_spatial" }
optima_linalg = { path = "../optima_linalg" }
optima_file = { path = "../optima_file" }
optima_bevy_egui = { path = "optima_bevy_egui" }
optima_geometry = { path = "../optima_geometry" }
optima_interpolation = { path = "../optima_interpolation" }
optima_universal_hashmap = { path = "../optima_universal_hashmap" }
optima_proximity = { path = "../optima_proximity" }
parry_ad = { package = "parry3d-f64", path = "/Users/djrakita/Documents/parry_ad/crates/parry3d-f64" }
bevy = { version="0.11.2", features = ["dynamic_linking"] }
bevy_egui = { version = "0.21" }
bevy_stl = { version = "0.11.0", features = ["wireframe"] }
bevy_mod_picking = {version = "0.15.0" }
bevy_transform_gizmo = { version = "0.8.0" }
# bevy_mod_debugdump = { git = "https://github.com/jakobhellermann/bevy_mod_debugdump" }
bevy_prototype_debug_lines = { version="0.11.1", features = ["3d"]}
nalgebra = { version="0.32.*", features=["rand", "serde-serialize"] }

