[package]
name = "optima_linalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad_trait   = { path = "/Users/djrakita/Documents/ad_trait" }
optima_file = { path = "../optima_file" }
nalgebra = { version="0.32.*", features=["rand", "serde-serialize"] }
ndarray = { version="0.15.6", features = ["serde"] }
arrayvec = { version="0.7.4", features = ["serde"] }
serde = { version="*", features = ["derive"] }
serde_json = { version="*" }
serde_with = { version="3.2.0" }