[package]
name = "optima_proximity2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad_trait = { path = "/Users/djrakita/Documents/ad_trait" }
parry_ad = { package = "parry3d-f64", path = "/Users/djrakita/Documents/parry_ad/crates/parry3d-f64" }
parry3d-f64 = { path = "/Users/djrakita/Documents/parry/crates/parry3d-f64" }
optima_3d_spatial = { path = "../optima_3d_spatial" }
optima_3d_mesh = { path = "../optima_3d_mesh" }
optima_linalg = { path = "../optima_linalg" }
optima_sampling = { path = "../optima_sampling" }
as-any = { version="0.3.1" }