[package]
name = "optima_robotics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad_trait   = { path = "/Users/djrakita/Documents/ad_trait" }
optima_file = { path = "../optima_file" }
optima_utils = { path = "../optima_utils" }
optima_3d_spatial = { path = "../optima_3d_spatial" }
urdf-rs = { version="0.7.2" }
arrayvec = { version="0.7.4", features = ["serde"] }
serde = { version="*", features = ["derive"] }
serde_json = { version="*" }
