[package]
name = "optima_robotics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ad_trait = { path = "/Users/djrakita/Documents/ad_trait" }
ad_trait = { git = "https://github.com/djrakita/ad_trait" }
optima_file = { path = "../optima_file" }
optima_misc = { path = "../optima_misc" }
optima_3d_spatial = { path = "../optima_3d_spatial" }
optima_linalg = { path = "../optima_linalg" }
optima_3d_mesh = { path = "../optima_3d_mesh" }
optima_console = { path = "../optima_console" }
optima_proximity = { path = "../optima_proximity" }
optima_sampling = { path = "../optima_sampling"}
optima_universal_hashmap = { path = "../optima_universal_hashmap" }
optima_optimization2 = { path = "../optima_optimization" }
optima_geometry = { path = "../optima_geometry" }
nalgebra = { version="0.32.*", features=["rand", "serde-serialize"] }
urdf-rs = { version="0.7.2" }
arrayvec = { version="0.7.4", features = ["serde"] }
serde = { version="*", features = ["derive"] }
serde_json = { version="*" }
serde_with = { version="3.2.0" }
optimization_engine = { version = "0.7.7" }
ahash = { version="0.8.6", features=["serde"] }
parry_ad = { package = "parry3d-f64", git="https://github.com/djrakita/parry_ad" }
# parry_ad = { package = "parry3d-f64", path = "/Users/djrakita/Documents/parry_ad/crates/parry3d-f64" }
num-traits = "0.2.17"