[package]
name = "optima_sampling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad_trait = { path = "/Users/djrakita/Documents/ad_trait" }
optima_linalg = { path = "../optima_linalg" }
rand = { version="0.8.5", features=["getrandom"] }
rand_distr = { version="0.4.3" }
rand_chacha = { version="0.3.1" }
